--- a/2017/09.md
+++ b/2017/09.md
@@ -2,7 +2,7 @@
 
 ## 22
 
-### UITextFile和UITextView的textContentType属性新类型
+### 1. UITextFile和UITextView的textContentType属性新类型
 
 **作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
@@ -15,7 +15,7 @@ _textField.textContentType = UITextContentTypePassword;
 
 ![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017-09-22-1-1.jpg?raw=true)
 
-### 自动记住键盘类型
+### 2. 自动记住键盘类型
 
 **作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
@@ -28,9 +28,22 @@ _textField.textContentType = UITextContentTypePassword;
 }
 ```
 
+### 3. iPhone X屏幕基本信息
+
+适配iPhone X时，需要了解一些屏幕的基本信息：
+
+1. iPhone X是真正的3x设备，1个point代表屏幕上的***3×3***个像素；而iPhone 7s 大概是***2.88×2.88***个像素；
+2. iPhone X屏幕大小是***375×812***个点 (***1125×2436***像素)；
+3. iPhone X屏幕的长宽比大约是***9:19.5***，iPhone 5~8的长宽比都是***9:16***；不过iPhone X与iPhone 6/6s/7/8的屏幕宽度是一样的；
+4. 大刘海，这应该是最直观的，导致状态栏被分割在刘海两侧
+
+#### 参考
+
+1. [How iOS Apps Adapt to the iPhone X Screen Size](https://medium.com/@hacknicity/how-ios-apps-adapt-to-the-iphone-x-screen-size-a00bd109bbb9)
+
 ## 20
 
-### iOS 11中的New Color Set
+### 1. iOS 11中的New Color Set
 
 **作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
@@ -104,7 +117,7 @@ static NSString* const k10AEFFColor = @"10AEFF";
 
 ## 18 
 
-### JSManagedValue对底层Javascript值的引用
+### 1. JSManagedValue对底层Javascript值的引用
 
 使用JSManagedValue保存值时，需要注意其底层的Javascript值的使用。
 
@@ -138,7 +151,7 @@ menuAction是一个Javascript回调函数，在iOS代码中用一个JSManagedVal
 
 ## 15
 
-### iOS 11 中 applicationDidEnterBackground:延迟执行
+### 1. iOS 11 中 applicationDidEnterBackground:延迟执行
 
 **作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
@@ -146,7 +159,7 @@ App 进入后台后, `applicationDidEnterBackground:`这个方法将延迟大约
 
 ## 6
 
-### WKWebView检测首屏渲染时间
+### 1. WKWebView检测首屏渲染时间
 
 **作者**: [bestswifter](https://weibo.com/bestswifter)
 
