--- a/2017/01.md
+++ b/2017/01.md
@@ -6,7 +6,9 @@
 
 函数式编程中有惰性求值的概念，即一次计算在真正需要时才执行，尽可能推迟求解表达式。
 
-假如我们有一个数组，我们对每个元素作`element*2`的map操作，获取其中某一个元素，我们会如下处理:
+假如我们有一个数组，我们对每个元素作`element*2`的map操作，获取其中某一个元素，我们会如代码清单4-1-1处理:
+
+**代码清单4-1-1**
 
 ```swift
 let array = [1, 2, 4, 5, 3, 7]
@@ -16,7 +18,9 @@ print(element)
 
 这个计算对每个元素都*2，最后我们只取了其中一个值，也就是说在这个场景中另外5次计算是无意义的。
 
-这时使用惰性求值就可以避免这算浪费。我们知道Swift中有个lazy关键字，如果用来修饰属性之类的，可以实现属性的惰性求值。同样，Swift扩展了LazySequenceProtocol协议，提供了一个lazy属性，用于处理map，filter等操作的惰性求值，定义如下所示：
+这时使用惰性求值就可以避免这算浪费。我们知道Swift中有个lazy关键字，如果用来修饰属性之类的，可以实现属性的惰性求值。同样，Swift扩展了LazySequenceProtocol协议，提供了一个lazy属性，用于处理map，filter等操作的惰性求值，定义如代码清单4-1-2所示：
+
+**代码清单4-1-2**
 
 ```swift
 /// Avoid creating multiple layers of `LazySequence` wrapper.
@@ -28,7 +32,9 @@ extension LazySequenceProtocol {
 }
 ```
 
-所以，上面这个例子如果要实现惰性求值，则可以如下处理：
+所以，上面这个例子如果要实现惰性求值，则可以如代码清单4-1-3处理：
+
+**代码清单4-1-3**
 
 ```swift
 let array = [1, 2, 4, 5, 3, 7]
@@ -42,8 +48,9 @@ print(element)
 
 ### Swift stride操作
 
+在Swift中，如果我们想创建一个一定步长的数组，可以如代码清单5-1-1操作。
 
-在Swift中，如果我们想创建一个一定步长的数组，可以如下操作。
+**代码清单5-1-1**
 
 ```swift
 var array: [Double] = []
@@ -52,7 +59,9 @@ for value in 0..<10 {
 }
 ```
 
-不过如果想在某个区间创建这样一个序列的话，会比较麻烦。为此，Swift提供了一个便捷函数：`stride`，可以在某个区间内创建一个任意可变步长的序列，这个步长可以是任意值。所以上面这个问题的实现可以如下处理，
+不过如果想在某个区间创建这样一个序列的话，会比较麻烦。为此，Swift提供了一个便捷函数：`stride`，可以在某个区间内创建一个任意可变步长的序列，这个步长可以是任意值。所以上面这个问题的实现可以如代码清单5-1-2处理，
+
+**代码清单5-1-2**
 
 ```swift
 let array = stride(from: 0, to: 3, by: 0.3).map {
@@ -60,7 +69,9 @@ let array = stride(from: 0, to: 3, by: 0.3).map {
 }
 ```
 
-实际上，`stride`的产生的序列如下：
+实际上，`stride`的产生的序列如代码清单5-1-3：
+
+**代码清单5-1-3**
 
 `start, start + stride, start + 2 * stride, …, start + n * stride`
 
@@ -73,7 +84,9 @@ let array = stride(from: 0, to: 3, by: 0.3).map {
 
 ### static方法与class方法的区别
 
-在Swift中，`static`和`class`这两个关键字都可以修饰类的方法，以表明这个方法是一个类方法。不过这两者稍微有一些区别：`class`修饰的类方法可以被子类重写，而`static`修饰的类方法则不能。如下所示：
+在Swift中，`static`和`class`这两个关键字都可以修饰类的方法，以表明这个方法是一个类方法。不过这两者稍微有一些区别：`class`修饰的类方法可以被子类重写，而`static`修饰的类方法则不能。如代码清单5-2-1所示：
+
+**代码清单5-2-1**
 
 ```swift
 class A {
@@ -106,7 +119,9 @@ B.method2()
 
 ### Swift中的函数值
 
-我们知道在Swift中，函数是一等公民，即函数也是一种类型，可充当参数、返回值等角色，当然也可以定义函数类型的常量/变量。利用这个特性，在某些场景下可以简化我们的代码，如下代码所示。
+我们知道在Swift中，函数是一等公民，即函数也是一种类型，可充当参数、返回值等角色，当然也可以定义函数类型的常量/变量。利用这个特性，在某些场景下可以简化我们的代码，如代码清单6-1-1所示：
+
+**代码清单6-1-1**
 
 ```swift
 let setInt: (Int, String) -> Void = UserDefaults.standard.set
@@ -118,7 +133,9 @@ print(getInt("key"))
 
 ### Array.contains操作
 
-Swift中判断一个`Array`中是否包含某个元素，我们可以使用`contains`方法，如下所示：
+Swift中判断一个`Array`中是否包含某个元素，我们可以使用`contains`方法，如代码清单6-2-1所示：
+
+**代码清单6-2-1**
 
 ```swift
 let array = [2, 5, 6, 7, 19, 40]
@@ -126,7 +143,9 @@ let array = [2, 5, 6, 7, 19, 40]
 array.contains(10)				// false
 ```
 
-不过这个方法要求数组中的元素类型实现了`Equatable`协议，否则无法使用，如下所示：
+不过这个方法要求数组中的元素类型实现了`Equatable`协议，否则无法使用，如代码清单6-2-2所示：
+
+**代码清单6-2-2**
 
 ```swift
 enum Animal {
@@ -140,11 +159,15 @@ let hasCat = animals.contains(.cat(100))	// 编译器错误
 
 还好Swift为我们提供了另一个`contains`方法，可以自定义谓词条件作为判断依据，其定义如下：
 
+**代码清单6-2-3**
+
 ```swift
 public func contains(where predicate: (Element) throws -> Bool) rethrows -> Bool
 ```
 
-这个方法会查看数组是否包含满足给定的谓词条件的元素。可以看到这个方法是一个高阶函数，其参数是一个尾随闭包，在闭包内我们可以根据实际需要来实现我们自己的判断。所以上面的判断可以如下实现：
+这个方法会查看数组是否包含满足给定的谓词条件的元素。可以看到这个方法是一个高阶函数，其参数是一个尾随闭包，在闭包内我们可以根据实际需要来实现我们自己的判断。所以上面的判断可以如代码清单6-2-4实现：
+
+**代码清单6-2-4**
 
 ```swift
 enum Animal {
@@ -163,7 +186,9 @@ let hasCat = animals.contains { animal in
 }
 ```
 
-当然，对于元素类型实现了`Equatable`协议的数组，也可以使用这个方法。可以自定义谓词条件，查看数组是否有满足此条件的元素，如下所示：
+当然，对于元素类型实现了`Equatable`协议的数组，也可以使用这个方法。可以自定义谓词条件，查看数组是否有满足此条件的元素，如代码清单6-2-5所示：
+
+**代码清单6-2-5**
 
 ```swift
 let array = [2, 5, 6, 7, 19, 40]
@@ -177,7 +202,9 @@ array.contains { (element) -> Bool in
 
 ### NSRecursiveLock递归锁的使用
 
-`NSRecursiveLock`定义的是一个递归锁，这个锁可以被同一线程多次请求，而不会引起死锁。它主要是用在循环或递归操作中。我们先来看下面的示例：
+`NSRecursiveLock`定义的是一个递归锁，这个锁可以被同一线程多次请求，而不会引起死锁。它主要是用在循环或递归操作中。我们先来看代码清单7-1-1的示例：
+
+**代码清单7-1-1**
 
 ```swift
 let lock = NSLock()
@@ -208,7 +235,9 @@ DispatchQueue.global().async {
 }
 ```
 
-这段代码是一个典型的死锁情况。在我们的线程中，`RecursiveMethod`是递归调用的。所以每次进入这个闭包函数时，都会去加一次锁，而从第二次开始，由于锁已经被使用了且没有解锁，所以它需要等待锁被解除，这样就导致了死锁，线程被阻塞住了。调试器中会输出信息如下所示：
+这段代码是一个典型的死锁情况。在我们的线程中，`RecursiveMethod`是递归调用的。所以每次进入这个闭包函数时，都会去加一次锁，而从第二次开始，由于锁已经被使用了且没有解锁，所以它需要等待锁被解除，这样就导致了死锁，线程被阻塞住了。调试器中会输出信息如代码清单7-1-2所示：
+
+**代码清单7-1-2**
 
 ```swift
 start
@@ -219,7 +248,9 @@ start
 
 在这种情况下，我们就可以使用`NSRecursiveLock`。它可以允许同一线程多次加锁，而不会造成死锁。递归锁会跟踪它被`lock`的次数。每次成功的`lock`都必须平衡调用`unlock`操作。只有达到这种平衡，锁最后才能被释放，以供其它线程使用。
 
-所以，使用`NSRecursiveLock`对图1的代码进行一下改造，这样，程序就能正常运行了，如下所示。
+所以，使用`NSRecursiveLock`对图1的代码进行一下改造，这样，程序就能正常运行了，如代码清单7-1-3所示。
+
+**代码清单7-1-3**
 
 ```swift
 let lock = NSRecursiveLock()
@@ -266,7 +297,9 @@ DispatchQueue.global().async {
 在Cocoa中，大部分API的`closure/block`参数都是逃逸的(`escaping`)，因此，在swift中调用Objective-C的API时，编译器会自动在Objective-C API中的`closure/block`参数前面添加`@escaping`。
 
 在Objective-C中，如果我们不希望`block`是逃逸的，则可以在参数前面添加`((noescape))`属性，如
-下代码所示。另外也可以用系统提供的`NS_NOESCAPE/CF_NOESCAPE`宏。
+代码清单8-1-1所示。另外也可以用系统提供的`NS_NOESCAPE/CF_NOESCAPE`宏。
+
+**代码清单8-1-1**
 
 ```objc
 // Handler.h
@@ -311,7 +344,9 @@ typedef void (^CompleteHandler)(void);
 @end
 ```
 
-不过在Xcode 8下测试了一下，编译器对这个属性貌似是无感的，在Siwft中调用，无论有没有加`((noescape))`属性，都不会有错误或警告提示，如下代码所示。
+不过在Xcode 8下测试了一下，编译器对这个属性貌似是无感的，在Siwft中调用，无论有没有加`((noescape))`属性，都不会有错误或警告提示，如代码清单8-1-2所示。
+
+**代码清单8-1-2**
 
 ```swift
 class HandlerCaller: NSObject {
@@ -340,7 +375,9 @@ class HandlerCaller: NSObject {
 
 ### Swift中的escaping closure
 
-在Swift中使用`@escaping`来修饰一个逃逸闭包(`Escaping Closures`)，即闭包作为参数传到一个函数中时，这个闭包可以不在函数中调用，而在函数返回之后的某个时间再调用。如可以在函数中将闭包赋值给一个类的成员变量，或者保存在一个数组中，以备后续异步调用。这类闭包参数需要使用`@escaping`来修饰，否则会报错，如下所示。
+在Swift中使用`@escaping`来修饰一个逃逸闭包(`Escaping Closures`)，即闭包作为参数传到一个函数中时，这个闭包可以不在函数中调用，而在函数返回之后的某个时间再调用。如可以在函数中将闭包赋值给一个类的成员变量，或者保存在一个数组中，以备后续异步调用。这类闭包参数需要使用`@escaping`来修饰，否则会报错，如代码清单8-2-1所示。
+
+**代码清单8-2-1**
 
 ```swift
 var handlers: [(Int) -> Void] = []
@@ -350,7 +387,9 @@ func complete(handler: (Int) -> Void) {
 }
 ```
 
-需要注意的一个问题是，如果在类中使用逃逸闭包，且闭包内要调用实例对象的属性或方法时，必须显式地引用`self`，否则会报错，如下所示。
+需要注意的一个问题是，如果在类中使用逃逸闭包，且闭包内要调用实例对象的属性或方法时，必须显式地引用`self`，否则会报错，如代码清单8-2-2所示。
+
+**代码清单8-2-2**
 
 ```swift
 class A {
@@ -374,7 +413,7 @@ class A {
 
 `Traits`是一个可以实现实时更新代码，而不需要重新运行程序就可以看到效果的库，效果如下图所示，源码地址在[这里](https://github.com/krzysztofzablocki/Traits)。
 
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017-01-09-1-1.gif?raw=true)
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/01/09-1-1.gif?raw=true)
 
 `Traits`主要是依赖于`Injection`的代码注入功能来实现实时更新。它可以是在代码中更新视图对象的属性，也可以在一个`json`配置文件甚至是远程的配置文件中处理，且做到实时更新。对配置文件的处理，主要依赖于`ObjectMapper`来实现`json`数据与属性的映射，同时借助`KZFileWatchers`库来监听配置文件的更新。
 
@@ -382,11 +421,11 @@ class A {
 
 1. 需要为每个属性定义一个类并继承`Trait`类(不同类的相同属性可以定义一个类，如`UILabel`和`UITextFiled`的`font`属性)，如图2代码所示。
 
-	![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017-01-09-1-2.png?raw=true)
+	![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/01/09-1-2.png?raw=true)
 	
 2. 同时需要为每个元素的每个属性都定义一个标识，如图3代码所示。不过作者提供了一个shell脚本(generateTraitsIdentifiers.sh)来处理。
 	
-	![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017-01-09-1-3.png?raw=true)
+	![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/01/09-1-3.png?raw=true)
 
 ## 10
 
@@ -394,19 +433,19 @@ class A {
 
 `Injection`是johnno开发的一个`Xcode`插件，允许我们将代码实现更快注入到模拟器运行的程序或macOS程序。原先可以通过`Alcatraz`安装到Xcode中，不过现在是独立的App了。可以在[这里](http://johnholdsworth.com/Injection.app.zip)下载安装。启动后会出现在屏幕顶部的工具栏中，如下图所示。
 
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017-01-10-1-1.png?raw=true)
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/01/10-1-1.png?raw=true)
 
 要检测是否有效，可以在某个类里面添加`injected`方法，然后打个断点。在代码修改后保存，然后注入，如果进入这个断点，则说明安装成功，同时控制器会有相应信息输出，如下图所示。
 
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017-01-10-1-2.png?raw=true)
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/01/10-1-2.png?raw=true)
 
 `Injection`使用`AppleScript`来和Xcode进行通信，以确定当前的文件与工程，然后将代码注入到模拟器，再加载新代码，并将新代码替换原来的代码。其效果如下图所示。
 
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017-01-10-1-3.gif?raw=true)
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/01/10-1-3.gif?raw=true)
 
 `Injection`程序还包含一个`Xprobe`浏览器，用于查看程序的内存。可以选择图1中的`Load Xprobe`菜单项，弹出的窗口中显示了当前时间点的对象实例，我们可以在这做一些有意思的事情，如下图所示。
 
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017-01-10-1-4.png?raw=true)
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/01/10-1-4.png?raw=true)
 
 [Injection工程源码](https://github.com/johnno1962/injectionforxcode)
 
@@ -425,19 +464,19 @@ Quartz在填充区域时有两套规则：`非零缠绕数规则(nonzero winding
 
 官方文档给出了下图来演示两种规则的效果。
 
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017-01-11-1-1.gif?raw=true)
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/01/11-1-1.gif?raw=true)
 
 不过今天测试了一下，发现与文档有出入，可能是理解不对。绘制代码如下图所示，
 
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017-01-11-1-2.png?raw=true)
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/01/11-1-2.png?raw=true)
 
 测试代码如下图所示，
 
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017-01-11-1-3.png?raw=true)
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/01/11-1-3.png?raw=true)
 
 绘制结果如下图所示。
 
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017-01-11-1-4.png?raw=true)
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/01/11-1-4.png?raw=true)
 
 填充规则除了这两种，还有`Positive`和`Negative`，有兴趣的可以研究一下。 
 
@@ -454,7 +493,9 @@ Quartz在填充区域时有两套规则：`非零缠绕数规则(nonzero winding
 
 使用高阶函数过滤一个数组中的nil可以有两种方法：`filter`和`flatMap`。
 
-`filter`方法如下代码所示：
+`filter`方法如代码清单12-1-1所示：
+
+**代码清单12-1-1**
 
 ```swift
 let array: [Int?] = [1, 2, 3, 5, nil, 9]
@@ -466,7 +507,9 @@ let result = array.filter { element in
 print(result)		// [Optional(1), Optional(2), Optional(3), Optional(5), Optional(9)]
 ```
 
-`flatMap`方法如下代码所示：
+`flatMap`方法如代码清单12-1-2所示：
+
+**代码清单12-1-2**
 
 ```swift
 let array: [Int?] = [1, 2, 3, 5, nil, 9]
@@ -481,7 +524,9 @@ print(result)		// [1, 2, 3, 5, 9]
 
 ### NSRecursiveLock.lock(before:)
 
-`NSRecursiveLock`递归锁提供了一个方法`lock(before:)`，用于在多线程情况下，去尝试请求一个递归锁，然后根据返回的布尔值，来做相应的处理。如下代码所示，是一个正常的递归锁调用过程：
+`NSRecursiveLock`递归锁提供了一个方法`lock(before:)`，用于在多线程情况下，去尝试请求一个递归锁，然后根据返回的布尔值，来做相应的处理。如代码清单12-2-1所示，是一个正常的递归锁调用过程：
+
+**代码清单12-2-1**
 
 ```swift
 let lock = NSRecursiveLock()
@@ -512,7 +557,9 @@ DispatchQueue.global().async {
 }
 ```
 
-在这个场景下，如果我们想另起一个线程，并且尝试去获取这个递归锁，则可以如下处理：
+在这个场景下，如果我们想另起一个线程，并且尝试去获取这个递归锁，则可以如代码清单12-2-2处理：
+
+**代码清单12-2-2**
 
 ```swift
 DispatchQueue.global().async {
@@ -538,9 +585,11 @@ DispatchQueue.global().async {
 
 在`Swift 3`之前，标准库定义了4个操作符以支持`Optional`类型，如下图所示。
 
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017-01-14-1-1.png?raw=true)
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/01/14-1-1.png?raw=true)
 
-不过`Swift 3`中，由于泛型不支持条件一致性判断，即没有通用的方法来定义在比较nil和非nil值时，应该得到怎样的值，所以实际结果可能不是预期的。所以，在`Swift 3`中，如果去比较两个`Optional`值，会给出编译错误，如下代码所示所示。而这一比较在Swift 3之前是没有问题的。
+不过`Swift 3`中，由于泛型不支持条件一致性判断，即没有通用的方法来定义在比较nil和非nil值时，应该得到怎样的值，所以实际结果可能不是预期的。所以，在`Swift 3`中，如果去比较两个`Optional`值，会给出编译错误，如代码清单14-1-1所示。而这一比较在Swift 3之前是没有问题的。
+
+**代码清单14-1-1**
 
 ```swift
 let dic1 = [
@@ -562,7 +611,9 @@ dic1["middle"] < dic2["middle"]		// value of optional type 'String?' not unwrapp
 
 ### __attribute__((objc_requires_super))
 
-Objective-C允许子类可以重写父类的方法。如果我们希望子类方法重写父类方法时必须使用super来调用父类的对应方法，则可以在方法声明后面添加clang的编译属性`objc_requires_super`。添加这一属性后，如果子类没有调用父类方法，则会给出一个编译警告，如下代码所示：
+Objective-C允许子类可以重写父类的方法。如果我们希望子类方法重写父类方法时必须使用super来调用父类的对应方法，则可以在方法声明后面添加clang的编译属性`objc_requires_super`。添加这一属性后，如果子类没有调用父类方法，则会给出一个编译警告，如代码清单15-1-1所示：
+
+**代码清单15-1-1**
 
 ```objc
 @interface Bird : NSObject
@@ -593,7 +644,9 @@ Objective-C允许子类可以重写父类的方法。如果我们希望子类方
 @end
 ```
 
-这个属性只能用记类中的方法声明，而不能用于协议。另外，`Foundation`提供了一个对应的宏`NS_REQUIRES_SUPER`，定义如下代码所示：
+这个属性只能用记类中的方法声明，而不能用于协议。另外，`Foundation`提供了一个对应的宏`NS_REQUIRES_SUPER`，定义如代码清单15-1-2所示：
+
+**代码清单15-1-2**
 
 ```objc
 #ifndef NS_REQUIRES_SUPER
@@ -615,11 +668,11 @@ Objective-C允许子类可以重写父类的方法。如果我们希望子类方
 
 `Objective-C`在默认情况下是将类或协议的名字作为元数据名称(`metadata name`)，即如果我们打印一个对象的`class`方法，输出就是对象所属类的类名，如下图所示。
 
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017-01-16-1-1.png?raw=true)
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/01/16-1-1.png?raw=true)
 
 如果我们想为类或协议指定一个字符串作为其元数据名称，而不是使用默认的，则可以使用编译属性`objc_runtime_name`，如下图代码所示，只需要在类或协议声明之前加上`__attribute__((objc_runtime_name("identifier")))`。
 
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017-01-16-1-2.png?raw=true)
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/01/16-1-2.png?raw=true)
 
 #### 参考：
 
@@ -633,15 +686,15 @@ Objective-C允许子类可以重写父类的方法。如果我们希望子类方
 
 苹果在64位ARM架构下，对`NSNumber`等小对象对象的存储做了优化，即使用`Tagged Pointer`技术。通过使用这种技术，`NSNumber`指针变量指向的值不再是单独存储在一块内存中，而是对指针本身做了特殊处理，如下图代码所示。
 
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017-01-17-1-1.png?raw=true)
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/01/17-1-1.png?raw=true)
 
 可以看到这些指针一部分直接保存数据(如下图蓝色部分)，另一部分作为特殊标记(如图2红色部分)，表示这是个特殊指针，不指向任何地址。这么做大大减少了这类值的存储空间，同时提高了它们的创建及读取效率。
 
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017-01-17-1-2.png?raw=true)
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/01/17-1-2.png?raw=true)
 
 当然，如果数据存储部分(7个字节)无法容纳下变量的值，则会按原始的方式，另辟空间去存储值，指针的值仍然是指向这个空间的地址，如下图所示。
 
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017-01-17-1-3.png?raw=true)
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/01/17-1-3.png?raw=true)
 
 #### 参考
 
@@ -652,7 +705,9 @@ Objective-C允许子类可以重写父类的方法。如果我们希望子类方
 
 ### Extension Selector
 
-在`Swift`中，我们可以使用`#selector`设置`target-action`模式中的`action`操作，如下代码所示。
+在`Swift`中，我们可以使用`#selector`设置`target-action`模式中的`action`操作，如代码清单21-1-1所示：
+
+**代码清单21-1-1**
 
 ```swift
 class ViewController: UIViewController {
@@ -674,9 +729,11 @@ class ViewController: UIViewController {
 
 如果你有代码洁癖，想把`#selector`集中起来管理，则可以定义一个结构体，来统一归集这样的代码，如下图所示。这样看着是不是会更整洁一些？
 
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017-01-21-1-1.png?raw=true)
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/01/21-1-1.png?raw=true)
 
-不过，还有种更好的方式，就是直接扩展`Selector`结构体，如图3代码所示，这样可以在使用时直接用`.buttonTapped`这种方式来引用，就像我们使用`.red`这样的`UIColor`属性一样简洁。
+不过，还有种更好的方式，就是直接扩展`Selector`结构体，如代码清单21-1-2所示，这样可以在使用时直接用`.buttonTapped`这种方式来引用，就像我们使用`.red`这样的`UIColor`属性一样简洁。
+
+**代码清单21-1-2**
 
 ```swift
 extension Selector {
@@ -707,7 +764,9 @@ class ViewController: UIViewController {
 
 ### typealias泛型闭包
 
-在`Swift`中我们可以用`typealias`来为已经存在的类型重新定义名字的,通过命名可以使代码变得更加清晰。当然也可以给闭包类型定义一个新名字，给带有泛型的闭包重新定义名字的方式如下所代码所示。
+在`Swift`中我们可以用`typealias`来为已经存在的类型重新定义名字的,通过命名可以使代码变得更加清晰。当然也可以给闭包类型定义一个新名字，给带有泛型的闭包重新定义名字的方式如代码清单21-2-1所示：
+
+**代码清单21-2-1**
 
 ```swift
 typealias Block<U> = (U, U) -> Bool
@@ -727,7 +786,9 @@ compare(number1: 10, number2: 20) {
 
 在`Objective-C/Swift`中使用`KVC`或`KVO`总是需要格外小心，因为对于`key`或`keyPath`，我们使用的是字符串字面量来处理。这样在编译期无法检测我们的输入是否正确，或许我们会因为一时大意，多写了或少写了一个字符，或拼错了单词。而这个错误只能在运行时，程序崩溃时才能发现，很不爽的吧。
 
-为此，在`Swift 3`中引入了`#keyPath()`这个表达式，它接收`Object.property`形式的参数，并将其转换成字符串，如下代码所示。因为使用的是对象和属性的方式，所以在编译时，编译器能去检测这个表达式是否有效，从而避免了上面的问题。
+为此，在`Swift 3`中引入了`#keyPath()`这个表达式，它接收`Object.property`形式的参数，并将其转换成字符串，如代码清单22-1-1所示。因为使用的是对象和属性的方式，所以在编译时，编译器能去检测这个表达式是否有效，从而避免了上面的问题。
+
+**代码清单22-1-1**
 
 ```swift
 class Person: NSObject {
@@ -769,7 +830,9 @@ chris.value(forKeyPath: #keyPath(Person.firstName))
 
 ### Swift 3中的AnyHashable
 
-在`Swift 3`的标准库中添加了`AnyHashable`这一新类型，其用途是在需要`Hash`值的集合中，可以混合使用多种`Hashable`类型。例如，字典的`key`值，其要求是`Hashable`类型，如果希望`key`值是任意实现了`Hashable`协议的类型，则在声明字典时，可以使用`AnyHashable`作为`key`的类型，如下代码所示。
+在`Swift 3`的标准库中添加了`AnyHashable`这一新类型，其用途是在需要`Hash`值的集合中，可以混合使用多种`Hashable`类型。例如，字典的`key`值，其要求是`Hashable`类型，如果希望`key`值是任意实现了`Hashable`协议的类型，则在声明字典时，可以使用`AnyHashable`作为`key`的类型，如代码清单24-1-1所示：
+
+**代码清单24-1-1**
 
 ```swift
 let description: [AnyHashable: Any] = [
