--- a/2017/02.md
+++ b/2017/02.md
@@ -468,6 +468,12 @@ enum Counter: Int {
 for i in 3...6 {
     print(Counter(rawValue: i))
 }
+
+// 输出
+// Optional(__lldb_expr_197.Counter.three)
+// Optional(__lldb_expr_197.Counter.four)
+// Optional(__lldb_expr_197.Counter.five)
+// nil
 ```
 
 #### 参考
