--- a/2017/09.md
+++ b/2017/09.md
@@ -1,67 +1,93 @@
 # 2017.09
 
-## 22
+## 6
 
-### 1. UITextFile和UITextView的textContentType属性新类型
+### WKWebView检测首屏渲染时间
 
-**作者**: [Lefe_x](https://weibo.com/u/5953150140)
+**作者**: [bestswifter](https://weibo.com/bestswifter)
 
-`UITextFile`和`UITextView`的`textContentType`属性新加了`UITextContentTypeUsername`和 `UITextContentTypePassword`类型，这样当你登录App时可以自动填充你的账号和密码，前提是你保存过密码到Safari或钥匙串。App可以和你的网站进行关联，如果在网站上登录过，可以自动填充密码和账户到你的App。
+调研了一下`WKWebView`如何检测首屏渲染的时间，经过阅读`WebKit`源码和尝试，发现这样可以（需要调用私有方法，可以`base64`加密一下）：
 
-```objc
-_textField.textContentType = UITextContentTypeUsername;
-_textField.textContentType = UITextContentTypePassword;
-```
-
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017-09-22-1-1.jpg?raw=true)
-
-### 2. 自动记住键盘类型
-
-**作者**: [Lefe_x](https://weibo.com/u/5953150140)
-
-自动记住你选择的键盘类型。比如在【密语】中，你和A聊天用英文，切换到英文键盘；和B聊天，切换到中文键盘；那么当你退出聊天后。与A再次聊天时，显示的是英文键盘，与B聊天显示的是中文键盘。你只需要在`UIViewController`中实现：
+**代码清单6-1-1**
 
 ```objc
-- (NSString *)textInputContextIdentifier
-{
-    return self.conversation.conversationId;
+// 注册
+[self.webview performSelectorOnMainThread:@selector(_setObservedRenderingProgressEvents:) withObject:@(127) waitUntilDone:NO];
+
+// 回调
+- (void)_webView:(WKWebView *)webView renderingProgressDidChange:(int)progressEvents {
+    // progressEvents == 64 表示首屏渲染结束
 }
 ```
 
-### 3. iPhone X屏幕基本信息
+## 15
 
-适配iPhone X时，需要了解一些屏幕的基本信息：
+### iOS 11 中 applicationDidEnterBackground:延迟执行
 
-1. iPhone X是真正的3x设备，1个point代表屏幕上的***3×3***个像素；而iPhone 7s 大概是***2.88×2.88***个像素；
-2. iPhone X屏幕大小是***375×812***个点 (***1125×2436***像素)；
-3. iPhone X屏幕的长宽比大约是***9:19.5***，iPhone 5~8的长宽比都是***9:16***；不过iPhone X与iPhone 6/6s/7/8的屏幕宽度是一样的；
-4. 大刘海，这应该是最直观的，导致状态栏被分割在刘海两侧
+**作者**: [Lefe_x](https://weibo.com/u/5953150140)
+
+App 进入后台后, `applicationDidEnterBackground:`这个方法将延迟大约 1000 毫秒执行, 那么如果在进入后台时做一些任务，可能会达不到预期的效果。如果 App 刚进入应用立即启动，`applicationDidEnterBackground:` 和 `applicationWillEnterForeground:` 这两个方法都不会调用。如果有这么一个场景，进入后台后给应用设置手势密码，当 App 刚进入后就立即启动，那么 `applicationDidEnterBackground`：这个方法不会立即执行，从而手势密码也就不会设置。
+
+## 18 
+
+### JSManagedValue对底层Javascript值的引用
+
+使用`JSManagedValue`保存值时，需要注意其底层的`Javascript`值的使用。
+
+`JSManagedValue`添加了"条件保留(`conditional retain`)"机制为值提供自动内存管理，不过需要使用`JSVirtualMachine`的`addManagedReference(_:withOwner:)`方法。如果没有的话可能会导致一些问题，因为`JSManagedValue`行为类似于`ARC`的`weak`引用，所以当`Javascript`的垃圾收集器把`JSManagedValue`的底层`Javascript`值销毁时，`JSManagedValue`对象的`value`属性会自动变成`nil`。
+
+下面是我写的一个Bug：
+
+**代码清单18-1-1**
+
+```javascript
+// action为局部变量
+const action = function () {
+	window.location.href = 'https://www.baidu.com';
+	setTimeout(() => {
+		api.setMenu([]);
+	}, 300);
+};
+
+appApi.setMenu([{
+	menuTitle: '订单',
+	menuAction: action,
+}]);
+```
+
+`menuAction`是一个`Javascript`回调函数，在`iOS`代码中用一个`JSManagedValue`来包装`menuAction`值，但由于`menuAction`是一个局部变量，所以一定时间会被回收；这时如果想再从`JSManagedValue`中取出`menuAction`回调来执行，由于其值已变成`nil`，所以不会产生任何效果。
+
+还是得多读读文档啊。
 
 #### 参考
 
-1. [How iOS Apps Adapt to the iPhone X Screen Size](https://medium.com/@hacknicity/how-ios-apps-adapt-to-the-iphone-x-screen-size-a00bd109bbb9)
+1. [JSManagedValue Reference](https://developer.apple.com/documentation/javascriptcore/jsmanagedvalue)
 
 ## 20
 
-### 1. iOS 11中的New Color Set
+### iOS 11中的New Color Set
 
 **作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
 适配 iOS 11 时意外发现个`New Color Set`，仔细研究了下，发现比较爽。
 
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017-09-20-1-1.jpg?raw=true)
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/09/20-1-1.jpg?raw=true)
 
 它集中管理项目中的颜色，项目中有多少颜色一目了然。不过按目前的实现方式`Color`的名字必须使用【16 进制】颜色的名字。当然你可以自己加个前缀之类的，比如：`gray_50E3C2`，这样在方法中`mtColorWithHexString:` 中去掉前缀即可。
 
 使用的时候，直接使用：
 
+**代码清单20-1-1**
+
 ```objc
 [UIColor colorNamed:name];
 ```
 
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017-09-20-1-2.jpg?raw=true)
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/09/20-1-2.jpg?raw=true)
 
 但是这个方法只有在 iOS 11 以上系统有效，我们可以自己实现一个方法，或者把系统的方法替换掉。
+
+**代码清单20-1-2**
 
 ```objc
 @implementation UIColor (main)
@@ -99,6 +125,8 @@ _textField.textContentType = UITextContentTypePassword;
 
 使用时，直接调用我们自定义的方法即可：
 
+**代码清单20-1-3**
+
 ```objc
 static NSString* const k50E3C2Color = @"50E3C2";
 static NSString* const k10AEFFColor = @"10AEFF";
@@ -115,64 +143,189 @@ static NSString* const k10AEFFColor = @"10AEFF";
 }
 ```
 
-## 18 
+## 22
 
-### 1. JSManagedValue对底层Javascript值的引用
-
-使用JSManagedValue保存值时，需要注意其底层的Javascript值的使用。
-
-JSManagedValue添加了"条件保留(conditional retain)"机制为值提供自动内存管理，不过需要使用JSVirtualMachine的addManagedReference(_:withOwner:)方法。如果没有的话可能会导致一些问题，因为JSManagedValue行为类似于ARC的weak引用，所以当Javascript的垃圾收集器把JSManagedValue的底层Javascript值销毁时，JSManagedValue对象的value属性会自动变成nil。
-
-下面是我写的一个Bug：
-
-```javascript
-// action为局部变量
-const action = function () {
-	window.location.href = 'https://www.baidu.com';
-	setTimeout(() => {
-		api.setMenu([]);
-	}, 300);
-};
-
-appApi.setMenu([{
-	menuTitle: '订单',
-	menuAction: action,
-}]);
-```
-
-menuAction是一个Javascript回调函数，在iOS代码中用一个JSManagedValue来包装menuAction值，但由于menuAction是一个局部变量，所以一定时间会被回收；这时如果想再从JSManagedValue中取出menuAction回调来执行，由于其值已变成nil，所以不会产生任何效果。
-
-还是得多读读文档啊。
-
-#### 参考
-
-1. [JSManagedValue Reference](https://developer.apple.com/documentation/javascriptcore/jsmanagedvalue)
-
-
-## 15
-
-### 1. iOS 11 中 applicationDidEnterBackground:延迟执行
+### UITextFile和UITextView的textContentType属性新类型
 
 **作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
-App 进入后台后, `applicationDidEnterBackground:`这个方法将延迟大约 1000 毫秒执行, 那么如果在进入后台时做一些任务，可能会达不到预期的效果。如果 App 刚进入应用立即启动，`applicationDidEnterBackground:` 和 `applicationWillEnterForeground:` 这两个方法都不会调用。如果有这么一个场景，进入后台后给应用设置手势密码，当 App 刚进入后就立即启动，那么 `applicationDidEnterBackground`：这个方法不会立即执行，从而手势密码也就不会设置。
+`UITextFile`和`UITextView`的`textContentType`属性新加了`UITextContentTypeUsername`和 `UITextContentTypePassword`类型，这样当你登录`App`时可以自动填充你的账号和密码，前提是你保存过密码到`Safari`或钥匙串。`App`可以和你的网站进行关联，如果在网站上登录过，可以自动填充密码和账户到你的`App`。
 
-## 6
-
-### 1. WKWebView检测首屏渲染时间
-
-**作者**: [bestswifter](https://weibo.com/bestswifter)
-
-调研了一下`WKWebView`如何检测首屏渲染的时间，经过阅读`WebKit`源码和尝试，发现这样可以（需要调用私有方法，可以`base64`加密一下）：
+**代码清单22-1-1**
 
 ```objc
-// 注册
-[self.webview performSelectorOnMainThread:@selector(_setObservedRenderingProgressEvents:) withObject:@(127) waitUntilDone:NO];
+_textField.textContentType = UITextContentTypeUsername;
+_textField.textContentType = UITextContentTypePassword;
+```
 
-// 回调
-- (void)_webView:(WKWebView *)webView renderingProgressDidChange:(int)progressEvents {
-    // progressEvents == 64 表示首屏渲染结束
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017-09-22-1-1.jpg?raw=true)
+
+### 自动记住键盘类型
+
+**作者**: [Lefe_x](https://weibo.com/u/5953150140)
+
+自动记住你选择的键盘类型。比如在【密语】中，你和A聊天用英文，切换到英文键盘；和B聊天，切换到中文键盘；那么当你退出聊天后。与A再次聊天时，显示的是英文键盘，与B聊天显示的是中文键盘。你只需要在`UIViewController`中实现：
+
+**代码清单20-2-1**
+
+```objc
+- (NSString *)textInputContextIdentifier
+{
+    return self.conversation.conversationId;
 }
 ```
+
+### iPhone X屏幕基本信息
+
+适配iPhone X时，需要了解一些屏幕的基本信息：
+
+1. iPhone X是真正的3x设备，1个point代表屏幕上的***3×3***个像素；而iPhone 7 plus 大概是***2.88×2.88***个像素；
+2. iPhone X屏幕大小是***375×812***个点 (***1125×2436***像素)；
+3. iPhone X屏幕的长宽比大约是***9:19.5***，iPhone 5~8的长宽比都是***9:16***；不过iPhone X与iPhone 6/6s/7/8的屏幕宽度是一样的；
+4. 大刘海，这应该是最直观的，导致状态栏被分割在刘海两侧
+
+#### 参考
+
+1. [How iOS Apps Adapt to the iPhone X Screen Size](https://medium.com/@hacknicity/how-ios-apps-adapt-to-the-iphone-x-screen-size-a00bd109bbb9)
+
+## 25
+
+### Xcode 9 支持开启多个模拟器
+
+`Xcode 9`开始可以同时开启多个模拟器了。这样我们就可以同时看不同模拟器下App的显示效果。
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/09/25-1-1.png?raw=true)
+
+可以在模拟器的`Hardware->Device`中启动新的模拟器。
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/09/25-1-2.png?raw=true)
+
+当然，在Xcode 9上切换模拟器时，也不会强制关闭之前打开的模拟器了。不过，开启多个模拟器的代价是会影响到电脑的速度。
+
+在Xcode 9之前尝试同时打开多个模拟器，则需要一些`trick`方法，可以参考[How to Run Multiple iOS Simulator Instances Xcode 8.2](https://www.youtube.com/watch?v=0aS_zEYvQY4)
+
+#### 参考
+
+1. [What’s New in Xcode](https://developer.apple.com/library/content/documentation/DeveloperTools/Conceptual/WhatsNewXcode/xcode_9/xcode_9.html)
+2. [What’s New in Xcode 9: Top 5 features to look forward to.](https://medium.com/@guydaher/whats-new-in-xcode-9-top-5-features-to-look-forward-to-c2e64868270b)
+
+## 26
+
+### 使用Xcode自带的运行时工具发现代码中的漏洞
+
+**作者**: [Lefe_x](https://weibo.com/u/5953150140)
+
+我们可以使用 `Xcode` 自带的 运行时工具发现代码中的漏洞，有些难以复现的 Bug 往往使用这些工具很容易定位到，比如线程引发的资源竞争问题，内存问题等。
+
+* **Main thread checker**【Xcode 9 新增特性】：当某些代码必须在主线程执行时，而你没有在主线程执行，那么 Xcode 9 会提示。`XXX must be used from thread only.`。这个工具 `Xcode 9` 是默认打开的，建议开启。如下两图Xcode 9前后对比。
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/09/26-1-2.jpg?raw=true)
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/09/26-1-3.jpg?raw=true)
+
+* **Address Sanitizer**：发生内存异常时可以使用这个工具调试，比如 `buffer overflow`, `use-after-free`, `double free`, `use after end of scope`。
+
+* **Thread Sanitizer**：定位多线程问题，比如数据争用（`Data race`），想要打开这个开关，需要关闭 `Address Sanitizer` ，`Malloc Stack` 和 `Memory Management` 选项。下面这段代码会出现资源竞争的问题。勾选后，将会提示：
+
+```objc
+Race on a library object in -[ViewController testThreadRace] at 0x7b080000db20
+
+for (int i = 0; i < 10; i++) {
+   dispatch_async(dispatch_get_global_queue(0, 0), ^{
+      [self testThreadRace];
+   });
+}
+
+- (void)testThreadRace
+{
+    BOOL found = [_dict objectForKey:@"lefe"];		// Race on a library object in -[ViewController testThreadRace] at 0x7b080004b520
+    if (found) {
+        NSLog(@"Found");
+    }
+    [_dict setObject:@"WangSuyan" forKey:@"lefe"];
+}
+```
+
+* **Undefined Behavior Sanitizer 【Xcode 9新增特性】**：检测未定义的行为，这些多数服务于 C 语言，因为 OC 和 Swift 相对比较安全，在语言设计时就消除了大多数未定义的行为，如下图。它可以检测到大约 15 种未定义的行为，比如常见的有数组越界，未初始化，无效的枚举值，除数为零和空值判断等。我们用例子来列举几个未定义的行为（想了解更多看[官方文档](https://developer.apple.com/documentation/code_diagnostics/undefined_behavior_sanitizer)）：
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/09/26-1-1.jpg?raw=true)
+
+```objc
+- (NSInteger)testUndefinedBehavior
+{
+    NSInteger value;
+    if (self.name.length > 0) {
+        value = 12;
+    }
+    return value;
+}
+```
+
+如果勾选 `Undefined Behavior Sanitizer` 这样选项，Xcode 会提示
+
+```
+Variable 'value' is used uninitialized whenever 'if' condition is false
+```
+
+## 27 
+
+### -warn-long-expression-type-checking标识
+
+Swift的类型检测(`type-checker`)是编译时的一个性能瓶颈。
+
+在Xcode 9中添加了一个编译器标识位`-warn-long-expression-type-checking`，可以对那些耗时长的类型检测操作给出警告。
+
+我们可以在`Build Settings`->`Swift Compiler - Custom Flags`->`Other Swift Flags`中添加这个标识：`-Xfrontend -warn-long-expression-type-checking=<limit>`；其中`<limit>`是个阈值，以毫秒为单位，超出这个值的类型检测就给出警告。
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/09/27-1-1.png?raw=true)
+
+编译的警告信息如下图所示。
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/09/27-1-2.png?raw=true)
+
+获取警告信息之后，就可以根据需要去优化对应的操作。至于`<limit>`，可以凭经验设置，设置低了，可能会产生大量的警告信息。建议从高到低设置，先优化耗时高的。另外，建议只在`DEBUG`模式下开启。
+
+另外，在Xcode 9之前可以使用`-warn-long-function-bodies`标识(Xcode 9仍然保留)，这个是警告哪个方法的类型检测超过阈值。可以尝试一下。
+
+#### 参考
+
+1. [Measuring Swift compile times in Xcode 9](https://www.jessesquires.com/blog/measuring-compile-times-xcode9/)
+
+## 28
+
+### 查看Swift函数/方法编译时间
+
+我们可以使用`-debug-time-function-bodies`标识来查看Swift中每个函数/方法的编译时间。添加方式与`-warn-long-expression-type-checking`一样，在`Other Swift Flags`添加中`-Xfrontend -debug-time-function-bodies`。
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/09/28-1-1.png?raw=true)
+
+这样，我们就可以在`Report navigator`的编译日志里面看到。
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/09/27-1-2.png?raw=true)
+
+另外，如果是用`xcodebuild`命令行，则可以如下将日志格式化输出到文本文件：
+
+`xcodebuild -workspace App.xcworkspace -scheme App clean build OTHER_SWIFT_FLAGS="-Xfrontend -debug-time-function-bodies" | grep .[0-9]ms | grep -v ^0.[0-9]ms | sort -nr > log.txt`
+
+知道每个函数/方法的编译时间后，就可以有针对性的做优化了。
+
+#### 参考
+
+1. [Profiling your Swift compilation times](http://irace.me/swift-profiling)
+
+
+## 29
+
+### Xcode 9全屏模式下与模拟器分屏
+
+在`Xcode 9`之前，如果`Xcode`是全屏模式，那么使用模拟器时会有些不方便，看效果时需要切换屏幕（壕的话可以用双屏幕）。在`Xcode 9`中，添加了一个新功能，即在全屏模式下，可以和模拟器在同一屏幕上分屏操作，如下图所示。
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/09/29-1-1.png?raw=true)
+
+这需要模拟器开启“允许全屏模式”，只需要勾选上`Internal`->`Allow Fullscreen Mode`，再把模拟器拖入`Xcode`所在屏幕即可。如下图所示。
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/09/29-1-2.png?raw=true)
+
+至于模拟器的位置，可以在左右两侧，看个人习惯。也可以改变两者的屏幕占比。
 
 
